--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="./css/style.css">
 	</head>
 	<body>
-		<div>
+		<header>
 			<ul>
 				<li>Ellen Brøter</li>
 				<li>ellenbroter@gmail.com</li>
@@ -15,7 +15,7 @@
 				<li><a href="https://linkedin.com/in/ellen-broter777" target="_blank">LinkedIn</a></li>
 				<li><a href="https://github.com/ellenbroter" target="_blank">GitHub</a></li>
 			</ul>
-		</div>
+		</header>
 		<div>
 			<h1>Projects</h1>
 			<ul>
